[gd_scene load_steps=3 format=2]

[ext_resource path="res://gameplay/enemy_manager/enemy_manager.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -76, -74, 0, 0, 0, 0, 2034, -83, 0, 0, 0, 0, 2091, 1206, 0, 0, 0, 0, -58, 1185, 0, 0, 0, 0, -58, -47 )
}

[node name="enemy_manager" type="Node2D"]
script = ExtResource( 1 )

[node name="path_2d" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="path_follow" type="PathFollow2D" parent="path_2d"]
position = Vector2( -76, -74 )
rotation = -0.00426786

[node name="respawn_timer" type="Timer" parent="."]
autostart = true

[node name="enemies" type="Node2D" parent="."]

[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
